v1.0.1: fix mixin signatures, PBO readback, config singleton, Iris stub